2000-09-07  Andreas Jaeger  <aj@suse.de>

	* locale/programs/ld-collate.c (handle_ellipsis): Fix typo.
	* elf/dl-load.c (_dl_map_object_from_fd): Likewise.
	Reported by GOTO Masanori <gotom@debian.or.jp>.

2000-09-07  Ulrich Drepper  <drepper@redhat.com>

	* posix/Makefile (tests): Add tst-dir.
	(tst-dir-ARGS): New variable.
	* posix/tst-dir.c: New file.

2000-09-07  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/mips/sys/syscall.h (SYS_getdents64): New.
	(SYS_fcntl64): New.

	* sysdeps/unix/sysv/linux/mips/syscalls.list: Add getdents64.

2000-09-06  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/opendir.c: If O_DIRECTORY_WORKS is defined don't
	use the hack with tryopen_o_directory to determine at runtime
	whether it works.
	* sysdeps/unix/sysv/linux/opendir.c: New file.
	* sysdeps/unix/sysv/linux/kernel-features.h: Define
	__ASSUME_O_DIRECTORY if kernel knows O_DIRECTORY.

	* catgets/Depend: New file.  Add intl.
	* catgets/Makefile (tests): Add tst-catgets.
	(generated): Remove de.msg.
	(generated-dirs): Add de.
	Add dependency if tst-catgets output on de/libc.cat.
	* catgets/tst-catgets.c: New file.

	* po/ja.po: New file.
	* po/el.po: Update from translation team.

	* wcsmbs/Depend: New file.
	* wcsmbs/Makefile (tests): Add tst-btowc.
	(tst-btowc-ENV): Define.
	* wcsmbs/tst-btowc.c: New file.

	* sysdeps/unix/sysv/linux/_G_config.h: Moved to...
	* sysdeps/gnu/_G_config.h: ...here to be shared with Hurd.

	* sysdeps/posix/signal.c: Add sig to act.sa_mask for completeness.

	* stdlib/Makefile (tests): Add tst-bsearch.
	* stdlib/tst-bsearch.c: New file.

	* posix/getopt.c (_getopt_internal): Don't recognize an option
	name as ambiguous if it's a prefix for more than one name but the
	other struct option values are identical.

	* posix/tstgetopt.c: Add test for improved ambiguity recognition.
	Don't depend on visual inspection of the output file to recognize
	errors.
	* posix/Makefile (tstgetopt-ARGS): Add a few more parameters.
